--- a/style/style.scss
+++ b/style/style.scss
@@ -2,6 +2,8 @@
 *::after,
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 $colors: (
@@ -14,80 +16,276 @@ $fonts: (
     "second-font": Pacifico
 );
 
-body{
-    margin: 0;
+$form-smobile-width: 200px;
+
+$mobile-small: 'only screen and (max-width: 380px) and (max-height: 700px)';
+$mobile-huge: 'only screen and (min-height: 760px)';
+$mobile-large: 'only screen and (min-height: 730px)';
+$tablet: 'only screen and (min-width: 480px) and (max-width: 1200px)';
+$desktop: 'only screen and (min-width: 1200px)';
+
+@mixin flex ($-jcont, $-aitem, $-fdir){
     display: flex;
-    flex-direction: column;
-    height: 100vh;
-    background-color: map-get($map: $colors, $key: first-color);
+    justify-content: $-jcont;
+    align-items: $-aitem;
+    flex-direction: $-fdir;
 }
 
+@mixin font($-fsize, $-fweight){
+    font-size: $-fsize;
+    font-weight: $-fweight;
+}
+
+body{
+    @include flex(normal, normal, column);
+    // align-content: space-between;
+    height: 100vh;
+    margin: 0;
+    background-color: map-get($map: $colors, $key: first-color);
+    font-family: map-get($map: $fonts, $key: main-font);
+}
+
+
 header{
+    @include flex(space-between, center, row);
+    padding: .7rem 1.5rem;
     width: 100vw;
-    padding: 1rem  1.5rem;
+    height: 10vh;
     background-color: white;
-    display: flex;
+
+    //"miod malina" logo
     .logo{
-        width: 127px;
-        height: 54px;
+        width: 90px;
+        height: 40px;
         background: url('../assets/logo.png') no-repeat center;
         background-size: cover;
     }
 }
 
 main{
-    // height: 60%;
-    
+    position: relative;
+    top: 0;
+    left: 0;
+
+    //container with "Tak jak ty..." text and two meal pictures 
     .first-container{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background: url("../assets/kotlet_tlo.png") no-repeat center;
-        width: 100vw;
-        height: 12rem;
+        @include flex(space-between, center, row);
+        height: 13rem;
+        background: url("../assets/kotlet_tlo.png") repeat center;
         overflow: hidden;
-        
+
+        @media #{$mobile-large}{
+            height: 17rem;
+        }
+
+        //left meal picture
         &::before{
             content: '';
             position: relative;
-            top: 1.5rem;
-            left: -3rem;
-            width: 40%;
-            height: inherit;
+            top: 1.2rem;
+            left: -2rem;
+            width: 45%;
+            height: 100%;
             background: url("../assets/drugi_kotlet.png") no-repeat center;
             background-size: cover;
             
+            @media #{$mobile-large}{
+                top: 1.5rem;
+            }
         }
 
+        //right meal picture
         &::after{
             content: '';
             position: relative;
-            top: -1.5rem;
-            right: -3rem;
-            width: 40%;
-            height: inherit;
+            top: -2rem;
+            right: -2rem;
+            width: 45%;
+            height: 100%;
             background: url("../assets/kotlet.png") no-repeat center;
             background-size: cover;
+
+            @media #{$mobile-large}{
+                top: -2.55rem;
+            }
         }
 
+        //"Tak jak ty,..." text
         .main-text{
-            text-align: center;
-            font-size: 1.6rem;
+            @include font(1.33rem, normal);
             font-family: map-get($map: $fonts, $key: "second-font");
-            font-weight: normal;
+            text-align: center;
             color: map-get($map: $colors, $key: "second-color");
             position: absolute;
-            left: 20%;
-            margin: 0;
-            width: 12rem;
+            top: 3rem;
+            // margin: 0 0 4rem 0;
+            width: 100%;
+
+            @media #{$mobile-large}{
+                font-size: 1.4rem;
+                top: 5.5rem
+            }
         }
     }
-
+    
+    //form container
     .second-container{
-        font-family: 'Raleway'
+        @include flex(center, normal, row);
+        position: relative;
+        top: -3rem;
+        
+        .form-container{
+            @include flex(center, center, column);
+            background-color: white;
+            width: 90%;
+            padding: 1rem 2rem;
+            border-radius: 10px;
+            box-shadow: 2px 4px 7px 0px rgba(131, 131, 131, 0.3);
+
+            //"Specjalne okazje!" text
+            .form-head-text{
+                @include font(1.3rem, 700);
+                margin: 0 0 .5rem 0;
+
+                @media #{$mobile-large}{
+                    font-size: 1.5rem;
+                }
+            }
+
+            //"Zapisz sie" text
+            .form-second-text{
+                @include font(.5rem, 400);
+                letter-spacing: .2px;
+                line-height: .9rem;
+                width: $form-smobile-width;
+                border-left: 4px solid map-get($map: $colors, $key: second-color);
+                padding-left: .3rem;
+                margin: 0 0 0.5rem 0;
+                border-radius: 3px;
+            }
+
+            //whole form styling 
+            .form{
+                @include flex(normal, center, column);
+                // align-content: center;
+                width: $form-smobile-width;
+
+                .form-labels{
+                    @include font(.5rem, 500);
+                    margin: .5rem 0 .3rem 0;
+                    width: $form-smobile-width;
+
+                    @media #{$mobile-large}{
+                        font-size: .55rem;
+                    }
+                }
+
+                .input{
+                    @include font(.6rem, 500);
+                    font-family: map-get($map: $fonts, $key: main-font);
+                    padding: .3rem .3rem;
+                    border: none;
+                    background-color: rgb(226, 226, 226);
+                    border-radius: 3px;
+                    width: $form-smobile-width;
+
+                    &:focus{
+                        border: .5px solid grey;
+                        outline: none;
+                    }
+                }
+
+                .policy-text{
+                    @include font(.2rem, 600);
+                    text-align: center;
+                    padding: .5rem 0;
+                    border-bottom: .5px solid rgb(226, 226, 226);
+                }
+
+                .send-button{
+                    @include font(.5rem, 700);
+                    font-family: map-get($map: $fonts, $key: main-font);
+                    width: 5rem;
+                    height: 1.8rem;
+                    background-color: map-get($map: $colors, $key: second-color);
+                    border: none;
+                    box-shadow: 2px 2px 7px 0px rgba(131, 131, 131, 0.432);
+                    margin: 1rem 0 0 0;
+                    border-radius: 4px;
+
+                    @media #{$mobile-huge}{
+                        width: 5rem;
+                        height: 1.8rem;
+                    }
+                }
+            }
+
+        }
+        
     }
 }
 
+//footer
 footer{
-    height: 20%;
+    position: relative;
+    width: 100vw;
+    @include flex(space-between, normal, row);
+    padding: 1.5rem 1.5rem;
+
+    @media #{$mobile-huge}{
+        position: absolute;
+        bottom: 0;
+    }
+    
+    //yellow rectangle
+    &::before{
+        content: "";
+        position: absolute;
+        width: 2rem;
+        height: .3rem;
+        left: 1.5rem;
+        top: -.5rem;
+        background-color: map-get($map: $colors, $key: second-color);
+        border-radius: 4px;
+    }
+
+    //nav for lazy people 
+    .footer-nav{
+        @include font(.55rem, 500);
+        
+        h4{
+            margin: 0 0 .4rem 0;
+        }
+
+        ul{
+            @include flex(flex-start, normal, column);
+            @include font(.4rem, 400);
+            list-style-type: none;
+            padding: 0;
+
+            li{
+                margin-top: .2rem;
+
+                a{
+                    color: black;
+                    text-decoration: none;
+
+                    &:visited{
+                        color: black;
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+
+        .social-media-container{
+            @include flex (space-between, center, row);
+            margin-top: .5rem;
+        }
+    }
 }
+
+
+
+
+
