zaloguj sie text added

--- a/style/style.scss
+++ b/style/style.scss
@@ -50,7 +50,7 @@ header{
     @include flex(space-between, center, row);
     padding: .7rem 1.5rem;
     width: 100vw;
-    height: 10vh;
+    height: 10%;
     background-color: white;
 
     //"miod malina" logo
