--- a/style/style.css
+++ b/style/style.css
@@ -43,7 +43,7 @@ header {
           flex-direction: row;
   padding: .7rem 1.5rem;
   width: 100vw;
-  height: 10vh;
+  height: 10%;
   background-color: white;
 }
 
