--- a/style/style.css
+++ b/style/style.css
@@ -41,13 +41,14 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  padding: .7rem 1.5rem;
+  padding: .7rem 1rem .7rem 1.3rem;
   width: 100vw;
-  height: 10%;
+  height: 60px;
   background-color: white;
 }
 
 header .logo {
+  position: relative;
   width: 90px;
   height: 40px;
   background: url("../assets/logo.png") no-repeat center;
