--- a/style/style.scss
+++ b/style/style.scss
@@ -48,13 +48,14 @@ body{
 
 header{
     @include flex(space-between, center, row);
-    padding: .7rem 1.5rem;
+    padding: .7rem 1rem .7rem 1.3rem;
     width: 100vw;
-    height: 10%;
+    height: 60px;
     background-color: white;
 
     //"miod malina" logo
     .logo{
+        position: relative;
         width: 90px;
         height: 40px;
         background: url('../assets/logo.png') no-repeat center;
