--- a/style/style.css
+++ b/style/style.css
@@ -41,6 +41,7 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  position: relative;
   padding: .7rem 1rem .7rem 1.3rem;
   width: 100vw;
   height: 60px;
