--- a/style/menu.css
+++ b/style/menu.css
@@ -45,7 +45,7 @@
 @media only screen and (max-width: 480px) {
   .mobile-menu {
     overflow: hidden;
-    height: 40px;
+    height: inherit;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
