--- a/style/menu.scss
+++ b/style/menu.scss
@@ -28,9 +28,9 @@ $mobile: 'only screen and (max-width: 480px)';
     .mobile-menu{
         overflow: hidden;
         height: inherit;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        // display: flex;
+        // justify-content: center;
+        // align-items: center;
         
         //checkbox to control menu
         .toggler{
