--- a/style/style.css
+++ b/style/style.css
@@ -51,9 +51,8 @@ header {
       -ms-flex-direction: row;
           flex-direction: row;
   position: relative;
-  padding: .7rem 1rem .7rem 1.3rem;
   width: 100%;
-  height: 5rem;
+  height: 40vh;
   background-color: white;
 }
 
