--- a/style/style.scss
+++ b/style/style.scss
@@ -61,9 +61,9 @@ body{
 header{
     @include flex(space-between, center, row);
     position: relative;
-    padding: .7rem 1rem .7rem 1.3rem;
+    // padding: .7rem 1rem .7rem 1.3rem;
     width: 100%;
-    height: 5rem;
+    height: 40vh;
     background-color: white;
 
     .logo{
