--- a/style/style.css
+++ b/style/style.css
@@ -24,6 +24,7 @@ body {
   width: 100vw;
   height: 100vh;
   margin: 0;
+  padding: 0;
   background-color: #fdf6d2;
   font-family: Raleway;
 }
@@ -52,7 +53,7 @@ header {
           flex-direction: row;
   position: relative;
   width: 100%;
-  height: 40vh;
+  height: 100%;
   background-color: white;
 }
 
@@ -66,7 +67,7 @@ header .logo {
 
 main {
   position: relative;
-  width: 100vw;
+  width: 100%;
   top: 0;
   left: 0;
 }
