--- a/style/style.scss
+++ b/style/style.scss
@@ -47,6 +47,7 @@ body{
     width: 100vw;
     height: 100vh;
     margin: 0;
+    padding: 0;
     background-color: map-get($map: $colors, $key: first-color);
     font-family: map-get($map: $fonts, $key: main-font);
     
@@ -63,7 +64,7 @@ header{
     position: relative;
     // padding: .7rem 1rem .7rem 1.3rem;
     width: 100%;
-    height: 40vh;
+    height: 100%;
     background-color: white;
 
     .logo{
@@ -77,7 +78,7 @@ header{
 
 main{
     position: relative;
-    width: 100vw;
+    width: 100%;
     top: 0;
     left: 0;
 
