--- a/style/style.css
+++ b/style/style.css
@@ -67,9 +67,19 @@ header .logo {
 
 main {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
   width: 100%;
-  top: 0;
-  left: 0;
 }
 
 main .first-container {
