--- a/style/style.scss
+++ b/style/style.scss
@@ -64,7 +64,7 @@ header{
     position: relative;
     // padding: .7rem 1rem .7rem 1.3rem;
     width: 100%;
-    height: 100%;
+    height: 5rem;
     background-color: white;
 
     .logo{
@@ -78,10 +78,6 @@ header{
 
 main{
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex: none;
     width: 100%;
     // top: 0;
     // left: 0;
@@ -119,7 +115,7 @@ main{
         &::after{
             content: '';
             position: relative;
-            top: -2rem;
+            // top: -2rem;
             right: -2rem;
             width: 45%;
             height: 100%;
