--- a/style/style.css
+++ b/style/style.css
@@ -90,6 +90,12 @@ main .first-container {
   position: relative;
 }
 
+@media only screen and (min-device-width: 375px) and (max-device-width: 830px) and (-webkit-min-device-pixel-ratio: 3) {
+  main .first-container {
+    height: 17rem;
+  }
+}
+
 main .first-container::before {
   content: '';
   position: relative;
@@ -110,6 +116,7 @@ main .first-container::before {
 main .first-container::after {
   content: '';
   position: relative;
+  top: -2rem;
   right: -2rem;
   width: 45%;
   height: 100%;
