--- a/style/style.css
+++ b/style/style.css
@@ -53,7 +53,7 @@ header {
           flex-direction: row;
   position: relative;
   width: 100%;
-  height: 5rem;
+  height: 50px;
   background-color: white;
 }
 
