--- a/style/style.scss
+++ b/style/style.scss
@@ -64,7 +64,7 @@ header{
     position: relative;
     // padding: .7rem 1rem .7rem 1.3rem;
     width: 100%;
-    height: 5rem;
+    height: 50px;
     background-color: white;
 
     .logo{
