--- a/style/style.scss
+++ b/style/style.scss
@@ -20,7 +20,9 @@ $form-smobile-width: 200px;
 
 $mobile-small: 'only screen and (min-device-width: 320px) and (max-device-width: 568px)';
 
-$mobile-huge: 'only screen and (min-height: 760px) and (max-width: 400px)';
+$mobile-ip6: 'only screen 
+and (min-device-width: 375px) 
+and (max-device-width: 667px) ';
 
 $long-mobile: 'only screen and (min-device-height: 700px) and (max-device-width: 430px)';
 
@@ -66,6 +68,11 @@ header{
     width: 100%;
     height: 50px;
     background-color: white;
+
+
+    @media #{$mobile-ip6}{
+        height: 100px;
+    }
 
     .logo{
         position: relative;
