--- a/style/style.scss
+++ b/style/style.scss
@@ -20,9 +20,7 @@ $form-smobile-width: 200px;
 
 $mobile-small: 'only screen and (min-device-width: 320px) and (max-device-width: 568px)';
 
-$mobile-ip6: 'only screen 
-and (min-device-width: 375px) 
-and (max-device-width: 667px) ';
+$mobile-ip6: 'only screen and (min-device-width: 375px) and (max-device-width: 667px)';
 
 $long-mobile: 'only screen and (min-device-height: 700px) and (max-device-width: 430px)';
 
