--- a/style/style.css
+++ b/style/style.css
@@ -57,7 +57,7 @@ header {
   background-color: white;
 }
 
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) {
+@media screen and (min-device-width: 375px) and (max-device-width: 667px) {
   header {
     height: 100px;
   }
