--- a/style/style.css
+++ b/style/style.css
@@ -8,9 +8,10 @@
 }
 
 body {
-  display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  -webkit-justify-content: space-between;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
