--- a/style/style.css
+++ b/style/style.css
@@ -8,10 +8,9 @@
 }
 
 body {
-  display: -webkit-flex;
+  display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-justify-content: space-between;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -22,6 +21,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: relative;
   width: 100vw;
   height: 100vh;
   margin: 0;
