--- a/style/menu.css
+++ b/style/menu.css
@@ -45,10 +45,19 @@
 @media only screen and (max-width: 480px) {
   .mobile-menu {
     height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .mobile-menu .toggler {
     width: 2.4rem;
-    height: 100%;
+    height: 40px;
     position: absolute;
     opacity: 0;
     cursor: pointer;
@@ -77,7 +86,7 @@
   }
   .mobile-menu .hamburger {
     width: 2.5rem;
-    height: 100%;
+    height: 40px;
     position: relative;
     background-color: transparent;
     display: -webkit-box;
