--- a/style/style.css
+++ b/style/style.css
@@ -93,14 +93,51 @@ main .first-container {
       -ms-flex-direction: row;
           flex-direction: row;
   height: 13rem;
+  width: 100vw;
   background: url("../assets/kotlet_tlo.png") repeat center;
   overflow: hidden;
   position: relative;
+  top: 0;
+  left: 0;
 }
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 830px) and (-webkit-min-device-pixel-ratio: 3) {
   main .first-container {
     height: 17rem;
+  }
+}
+
+main .first-container::before {
+  content: '';
+  position: relative;
+  top: 1.2rem;
+  left: -2rem;
+  width: 45%;
+  height: 100%;
+  background: url("../assets/drugi_kotlet.png") no-repeat center;
+  background-size: cover;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 830px) and (-webkit-min-device-pixel-ratio: 3) {
+  main .first-container::before {
+    top: 1.5rem;
+  }
+}
+
+main .first-container::after {
+  content: '';
+  position: relative;
+  top: -2rem;
+  right: -2rem;
+  width: 45%;
+  height: 100%;
+  background: url("../assets/kotlet.png") no-repeat center;
+  background-size: cover;
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 830px) and (-webkit-min-device-pixel-ratio: 3) {
+  main .first-container::after {
+    top: -2.55rem;
   }
 }
 
@@ -137,7 +174,6 @@ main .second-container {
       -ms-flex-direction: row;
           flex-direction: row;
   position: relative;
-  top: -3rem;
 }
 
 main .second-container .form-container {
