--- a/style/style.scss
+++ b/style/style.scss
@@ -66,6 +66,7 @@ header{
     // padding: .7rem 1rem .7rem 1.3rem;
     width: 100%;
     height: 50px;
+    min-height: 50px;
     background-color: white;
 
 
