--- a/style/style.css
+++ b/style/style.css
@@ -63,8 +63,6 @@ header .logo {
   position: relative;
   width: 90px;
   height: 40px;
-  background: url("../assets/logo.png") no-repeat center;
-  background-size: cover;
 }
 
 main {
@@ -109,8 +107,6 @@ main .first-container::before {
   left: -2rem;
   width: 45%;
   height: 100%;
-  background: url("../assets/drugi_kotlet.png") no-repeat center;
-  background-size: cover;
 }
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 830px) and (-webkit-min-device-pixel-ratio: 3) {
@@ -126,8 +122,6 @@ main .first-container::after {
   right: -2rem;
   width: 45%;
   height: 100%;
-  background: url("../assets/kotlet.png") no-repeat center;
-  background-size: cover;
 }
 
 @media only screen and (min-device-width: 375px) and (max-device-width: 830px) and (-webkit-min-device-pixel-ratio: 3) {
@@ -280,6 +274,8 @@ main .second-container .form-container .form .send-button {
   height: 1.8rem;
   background-color: #ffd200;
   border: none;
+  -webkit-box-shadow: 0px 0px 0px 10px #fff;
+          box-shadow: 0px 0px 0px 10px #fff;
   margin: 1rem 0 0 0;
   border-radius: 4px;
 }
@@ -379,5 +375,65 @@ footer .footer-nav .social-media-container {
       -ms-flex-direction: row;
           flex-direction: row;
   margin-top: .5rem;
+}
+
+footer .footer-nav .social-media-container a .instagram-icon {
+  width: 1.3rem;
+  height: 1.3rem;
+}
+
+footer .footer-nav .social-media-container a .facebook-icon {
+  width: 1.3rem;
+  height: 1.3rem;
+}
+
+.no-webp header .logo {
+  background: url("../assets/logo.png") no-repeat center;
+  background-size: cover;
+}
+
+.no-webp main .first-container::before {
+  background: url("../assets/drugi_kotlet.png") no-repeat center;
+  background-size: cover;
+}
+
+.no-webp main .first-container::after {
+  background: url("../assets/kotlet.png") no-repeat center;
+  background-size: cover;
+}
+
+.no-webp footer .footer-nav .social-media-container a .instagram-icon {
+  background: url("../assets/instagram.png") no-repeat center;
+  background-size: cover;
+}
+
+.no-webp footer .footer-nav .social-media-container a .facebook-icon {
+  background: url("../assets/facebook.png") no-repeat center;
+  background-size: cover;
+}
+
+.webp header .logo {
+  background: url("../assets/logo.webp") no-repeat center;
+  background-size: cover;
+}
+
+.webp main .first-container::before {
+  background: url("../assets/drugi_kotlet.webp") no-repeat center;
+  background-size: cover;
+}
+
+.webp main .first-container::after {
+  background: url("../assets/kotlet.webp") no-repeat center;
+  background-size: cover;
+}
+
+.webp footer .footer-nav .social-media-container a .instagram-icon {
+  background: url("../assets/instagram.webp") no-repeat center;
+  background-size: cover;
+}
+
+.webp footer .footer-nav .social-media-container a .facebook-icon {
+  background: url("../assets/facebook.webp") no-repeat center;
+  background-size: cover;
 }
 /*# sourceMappingURL=style.css.map */
