--- a/style/style.scss
+++ b/style/style.scss
@@ -73,8 +73,6 @@ header{
         position: relative;
         width: 90px;
         height: 40px;
-        background: url('../assets/logo.png') no-repeat center;
-        background-size: cover;
     }
 }
 
@@ -111,9 +109,7 @@ main{
             left: -2rem;
             width: 45%;
             height: 100%;
-            background: url("../assets/drugi_kotlet.png") no-repeat center;
-            background-size: cover;
-            
+        
             @media #{$mobile-large}{
                 top: 1.5rem;
             }
@@ -127,8 +123,6 @@ main{
             right: -2rem;
             width: 45%;
             height: 100%;
-            background: url("../assets/kotlet.png") no-repeat center;
-            background-size: cover;
 
             @media #{$mobile-large}{
                 top: -2.55rem;
@@ -232,9 +226,10 @@ main{
                     font-family: map-get($map: $fonts, $key: main-font);
                     width: 5rem;
                     height: 1.8rem;
-                    background-color: map-get($map: $colors, $key: second-color);
+                    background-color: #ffd200;
                     border: none;
                     // box-shadow: 2px 2px 7px 0px rgba(131, 131, 131, 0.432);
+                    box-shadow: 0px 0px 0px 10px #fff;
                     margin: 1rem 0 0 0;
                     border-radius: 4px;
 
@@ -307,6 +302,18 @@ footer{
         .social-media-container{
             @include flex (space-between, center, row);
             margin-top: .5rem;
+
+            a{
+                .instagram-icon{
+                    width: 1.3rem;
+                    height: 1.3rem;
+                }
+
+                .facebook-icon{
+                    width: 1.3rem;
+                    height: 1.3rem;
+                }
+            }
         }
     }
 }
@@ -314,4 +321,97 @@ footer{
 
 
 
+// ==> Handling all images on website for compatibility with browsers that doesn't suppot webp images <==  
 
+
+//no-support
+.no-webp {
+
+    header{
+        .logo{
+            background: url('../assets/logo.png') no-repeat center;
+            background-size: cover;
+        }
+    }
+
+    main{
+        .first-container{
+    
+            &::before{
+                background: url("../assets/drugi_kotlet.png") no-repeat center;
+                background-size: cover;
+            }
+    
+            &::after{
+                background: url("../assets/kotlet.png") no-repeat center;
+                background-size: cover;
+            }
+        }
+    }
+
+    footer{
+        .footer-nav{
+            .social-media-container{
+                a{
+                    .instagram-icon{
+                        background: url("../assets/instagram.png") no-repeat center;
+                        background-size: cover;
+                    }
+
+                    .facebook-icon{
+                        background: url("../assets/facebook.png") no-repeat center;
+                        background-size: cover;
+                    }
+                }
+            }
+        }
+    }
+
+
+}
+
+//support
+.webp {
+
+    header{
+        .logo{
+            background: url('../assets/logo.webp') no-repeat center;
+            background-size: cover;
+        }
+    }
+
+    main{
+        .first-container{
+    
+            &::before{
+                background: url("../assets/drugi_kotlet.webp") no-repeat center;
+                background-size: cover;
+            }
+    
+            &::after{
+                background: url("../assets/kotlet.webp") no-repeat center;
+                background-size: cover;
+            }
+        }
+    }
+
+    footer{
+        .footer-nav{
+
+            .social-media-container{
+
+                a{
+                    .instagram-icon{
+                        background: url("../assets/instagram.webp") no-repeat center;
+                        background-size: cover;
+                    }
+                    
+                    .facebook-icon{
+                        background: url("../assets/facebook.webp") no-repeat center;
+                        background-size: cover;
+                    }
+                }
+            }
+        }
+    }
+}
