--- a/style/style.css
+++ b/style/style.css
@@ -87,7 +87,6 @@ main .first-container {
           flex-direction: row;
   height: 13rem;
   width: 100vw;
-  background: url("../assets/kotlet_tlo.png") repeat center;
   overflow: hidden;
   position: relative;
   top: 0;
@@ -377,18 +376,25 @@ footer .footer-nav .social-media-container {
   margin-top: .5rem;
 }
 
-footer .footer-nav .social-media-container a .instagram-icon {
+footer .footer-nav .social-media-container a div.instagram-icon {
   width: 1.3rem;
   height: 1.3rem;
+  position: relative;
 }
 
-footer .footer-nav .social-media-container a .facebook-icon {
+footer .footer-nav .social-media-container a div.facebook-icon {
+  position: relative;
   width: 1.3rem;
   height: 1.3rem;
 }
 
 .no-webp header .logo {
   background: url("../assets/logo.png") no-repeat center;
+  background-size: cover;
+}
+
+.no-webp main .first-container {
+  background: url("../assets/kotlet_tlo.png") repeat center;
   background-size: cover;
 }
 
@@ -402,18 +408,23 @@ footer .footer-nav .social-media-container a .facebook-icon {
   background-size: cover;
 }
 
-.no-webp footer .footer-nav .social-media-container a .instagram-icon {
+.no-webp footer .footer-nav .social-media-container a div.instagram-icon {
   background: url("../assets/instagram.png") no-repeat center;
   background-size: cover;
 }
 
-.no-webp footer .footer-nav .social-media-container a .facebook-icon {
+.no-webp footer .footer-nav .social-media-container a div.facebook-icon {
   background: url("../assets/facebook.png") no-repeat center;
   background-size: cover;
 }
 
 .webp header .logo {
   background: url("../assets/logo.webp") no-repeat center;
+  background-size: cover;
+}
+
+.webp main .first-container {
+  background: url("../assets/kotlet_tlo.webp") repeat center;
   background-size: cover;
 }
 
