--- a/style/style.css
+++ b/style/style.css
@@ -24,6 +24,7 @@ body {
   position: relative;
   width: 100vw;
   height: 100vh;
+  max-height: 110vh;
   margin: 0;
   padding: 0;
   background-color: #fdf6d2;
