--- a/style/style.scss
+++ b/style/style.scss
@@ -48,6 +48,7 @@ body{
     // align-content: space-between;
     width: 100vw;
     height: 100vh;
+    max-height: 110vh;
     margin: 0;
     padding: 0;
     background-color: map-get($map: $colors, $key: first-color);
