--- a/style/style.scss
+++ b/style/style.scss
@@ -228,11 +228,11 @@ main{
                     width: 5rem;
                     height: 1.8rem;
                     background-color: #ffd200;
-                    border: none;
+                    // border: none;
                     // box-shadow: 2px 2px 7px 0px rgba(131, 131, 131, 0.432);
-                    box-shadow: 0px 0px 0px 10px #fff;
+                    // box-shadow: 0px 0px 0px 10px #fff;
                     margin: 1rem 0 0 0;
-                    border-radius: 4px;
+                    // border-radius: 4px;
 
                     // @media #{$mobile-huge}{
                     //     width: 5rem;
