--- a/style/style.css
+++ b/style/style.css
@@ -242,6 +242,17 @@ main .second-container .form-container .form .form-labels {
   }
 }
 
+main .second-container .form-container .form .input {
+  font-size: 0.6rem;
+  font-weight: 500;
+  font-family: Raleway;
+  padding: .3rem .3rem;
+  border: none;
+  background-color: #e2e2e2;
+  border-radius: 3px;
+  width: 200px;
+}
+
 main .second-container .form-container .form .input:focus {
   border: .5px solid grey;
   outline: none;
@@ -255,7 +266,7 @@ main .second-container .form-container .form .policy-text {
   border-bottom: 0.5px solid #e2e2e2;
 }
 
-main .second-container .form-container .form .send-button {
+main .second-container .form-container .form #send-button {
   font-size: 0.5rem;
   font-weight: 700;
   font-family: Raleway;
