--- a/style/style.css
+++ b/style/style.css
@@ -242,7 +242,7 @@ main .second-container .form-container .form .form-labels {
   }
 }
 
-main .second-container .form-container .form .input {
+main .second-container .form-container .form .input-form {
   font-size: 0.6rem;
   font-weight: 500;
   font-family: Raleway;
@@ -253,7 +253,7 @@ main .second-container .form-container .form .input {
   width: 200px;
 }
 
-main .second-container .form-container .form .input:focus {
+main .second-container .form-container .form .input-form:focus {
   border: .5px solid grey;
   outline: none;
 }
@@ -273,7 +273,13 @@ main .second-container .form-container .form #send-button {
   width: 5rem;
   height: 1.8rem;
   background-color: #ffd200;
+  border: none;
+  -webkit-box-shadow: 2px 2px 7px 0px rgba(131, 131, 131, 0.432);
+          box-shadow: 2px 2px 7px 0px rgba(131, 131, 131, 0.432);
+  -webkit-box-shadow: 0px 0px 0px 10px #fff;
+          box-shadow: 0px 0px 0px 10px #fff;
   margin: 1rem 0 0 0;
+  border-radius: 25%;
 }
 
 footer {
