--- a/style/style.css
+++ b/style/style.css
@@ -280,6 +280,9 @@ main .second-container .form-container .form #send-button {
           box-shadow: 0px 0px 0px 10px #fff;
   margin: 1rem 0 0 0;
   border-radius: 25%;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 footer {
