--- a/style/style.scss
+++ b/style/style.scss
@@ -233,6 +233,7 @@ main{
                     box-shadow: 0px 0px 0px 10px #fff;
                     margin: 1rem 0 0 0;
                     border-radius: 25%;
+                    appearance: none;
 
                     // @media #{$mobile-huge}{
                     //     width: 5rem;
