--- a/style/style.scss
+++ b/style/style.scss
@@ -230,9 +230,8 @@ main{
                     background-color: #ffd200;
                     border: none;
                     box-shadow: 2px 2px 7px 0px rgba(131, 131, 131, 0.432);
-                    box-shadow: 0px 0px 0px 10px #fff;
                     margin: 1rem 0 0 0;
-                    border-radius: 25%;
+                    border-radius: 0;
                     appearance: none;
 
                     // @media #{$mobile-huge}{
