--- a/style/style.css
+++ b/style/style.css
@@ -276,10 +276,8 @@ main .second-container .form-container .form #send-button {
   border: none;
   -webkit-box-shadow: 2px 2px 7px 0px rgba(131, 131, 131, 0.432);
           box-shadow: 2px 2px 7px 0px rgba(131, 131, 131, 0.432);
-  -webkit-box-shadow: 0px 0px 0px 10px #fff;
-          box-shadow: 0px 0px 0px 10px #fff;
   margin: 1rem 0 0 0;
-  border-radius: 25%;
+  border-radius: 0;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
