--- a/style/style.css
+++ b/style/style.css
@@ -277,7 +277,7 @@ main .second-container .form-container .form #send-button {
   -webkit-box-shadow: 2px 2px 7px 0px rgba(131, 131, 131, 0.432);
           box-shadow: 2px 2px 7px 0px rgba(131, 131, 131, 0.432);
   margin: 1rem 0 0 0;
-  border-radius: 0;
+  border-radius: 5px;
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
