--- a/style/style.scss
+++ b/style/style.scss
@@ -231,7 +231,7 @@ main{
                     border: none;
                     box-shadow: 2px 2px 7px 0px rgba(131, 131, 131, 0.432);
                     margin: 1rem 0 0 0;
-                    border-radius: 0;
+                    border-radius: 5px;
                     appearance: none;
 
                     // @media #{$mobile-huge}{
